--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
     <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
+    <img src="https://images.pexels.com/photos/5921494/pexels-photo-5921494.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="Calculadora">
     <h1>Seja bem vindo ao meu "Contador"</h1>
     <div class="contador">
+        <p>Aperte um dos botoes abaixo:</p>
         <button name="subtrair" onclick="decrement()">-</button>
         <span id="numeroAtual">0</span>
         <button name="somar" onclick="increment()">+</button>
     </div>
+    <p>Developed by Marcio Oliveira Sherbow</p>
     <script src="assets/script.js"></script>
 </body>
 </html>
