--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
     <h1>Seja bem vindo ao meu "Contador"</h1>
     <div class="contador">
         <p>Aperte um dos botoes abaixo:</p>
-        <button name="subtrair" onclick="decrement()">-</button>
+        <p>Ainda tem duvidas sobre o que fazer?<button class="botaoDuvida">?</button>
+        </p>
+        <p class="conteudoNovo"></p>
+        <button class="menos" name="subtrair" onclick="decrement()">-</button>
         <span id="numeroAtual">0</span>
-        <button name="somar" onclick="increment()">+</button>
+        <button class="mais" name="somar" onclick="increment()">+</button>
     </div>
     <p>Developed by Marcio Oliveira Sherbow</p>
     <script src="assets/script.js"></script>
